frontend/test/context/success/globalref-before-definition.fc
int foo() {
    return g;
}

int g = 1;
