frontend/test/context/error/varuse-in-initializer.fc
int foo() {
    int a = a;
}
